deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: website
