deploy/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/cluster-issuer: kubesail-letsencrypt
    certmanager.k8s.io/cluster-issuer: kubesail-letsencrypt
spec:
  rules:
    - host: kuehle.me
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 80
  tls:
    - hosts:
        - kuehle.me
      secretName: kuehle-me
